--- a/patches/all-ansible-2.4
+++ b/patches/all-ansible-2.4
@@ -1,5 +1,5 @@
 Bottom: 03147211e4c277726edc0f1afb8f0cde7fe7b6f2
-Top:    d0b4814e63eeee222abe1912b00c77af5c4833d5
+Top:    3dfcf92be3f141f7fe8e53ee175870d28ec47d28
 Author: Andrew Cooper <andrew.cooper@novatechweb.com>
 Date:   2018-05-10 12:19:57 -0500
 
@@ -650,15 +650,56 @@ index faee9e67..fffe49a5 100644
 +- include_tasks: restore.yml
    when: st_svn_restore.stat.exists == False
 diff --git a/roles/mariadb/tasks/main.yml b/roles/mariadb/tasks/main.yml
-index dadffc4d..698ee95c 100644
+index dadffc4d..b27a0af7 100644
 --- a/roles/mariadb/tasks/main.yml
 +++ b/roles/mariadb/tasks/main.yml
-@@ -15,7 +15,7 @@
+@@ -3,20 +3,42 @@
+     that:
+     - mariadb_root_password is defined
+ - name: Install MariaDB
+-  yum: name={{ item }} state=present
++  yum:
++    name: '{{ item }}'
++    state: present
+   with_items:
+     - mariadb-server
+     - mariadb
+ - name: Config MariaDB server
+-  template: src=ansible.cnf.j2 dest={{ mariadb_server_config_dir }}/ansible.cnf
+-            owner=root group=root mode=0644 backup=yes
++  template:
++    src: ansible.cnf.j2
++    dest: '{{ mariadb_server_config_dir }}/ansible.cnf'
++    owner: root
++    group: root
++    mode: 0644
++    backup: yes
++- name: Set host mysqld bind-address
++  template:
++    src: mariadb-bind-address.j2
++    dest: '{{ mariadb_server_config_dir }}/mariadb-bind-address.cnf'
++    owner: root
++    group: root
++    mode: 0644
++    backup: yes
+ - name: Enable and start MariaDB service
+-  service: name=mariadb enabled=yes state=started
++  service:
++    name: mariadb
++    enabled: yes
++    state: started
  - name: Check previous installation
-   stat: path={{ mariadb_client_config }}
+-  stat: path={{ mariadb_client_config }}
++  stat:
++    path: '{{ mariadb_client_config }}'
    register: cfg
 -- include: initial_config.yml
 +- include_tasks: initial_config.yml
    when: cfg.stat.exists is defined and cfg.stat.exists == false
  - name: Open the firewall
-   firewalld: service=mysql permanent=true state=enabled
+-  firewalld: service=mysql permanent=true state=enabled
++  firewalld:
++    service: mysql
++    permanent: true
++    state: enabled
+   when: mariadb_open_firewall
