--- a/patches/gitlab-10.8
+++ b/patches/gitlab-10.8
@@ -3,7 +3,10 @@ Top:    6d29d42a529305eee9ce083d3f7d91f2f774e33a
 Author: Andrew Cooper <andrew.cooper@novatechweb.com>
 Date:   2018-05-22 13:51:33 -0500
 
-Update gitlab to 10.1
+Updates gitlab to 10.8.4
+
+Reworks the ansible gitlab role to configure an official Omnibus release
+of Gitlab 10.8.4.
 
 
 ---
